vm/42sh_tester/public/input_logs/error_logs/42sh_534
42sh:1:27: [1m[91merror[0m: unexpected end of file
  1  |  echo $(( 1 + $(( 3 + 2 ))  
     |                            [1m[91m^[0m
